make usb passthrough optional

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,8 +7,13 @@
       - net-tools
       - tree
     state: present
-    upgrade: safe
     update_cache: true
+    cache_valid_time: 36000
+  become: yes
+
+- name: Upgrade all packages
+  apt:
+    upgrade: safe
     cache_valid_time: 36000
   become: yes
 
