--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,6 +7,7 @@
         - git
         - net-tools
         - tree
+        - ripgrep
       state: present
       update_cache: true
       cache_valid_time: 36000
